--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,8 +57,8 @@ jobs:
           body: |
             ## Release ${{github.run_number}}: Issue:
             
-            - Date: ${{env.NOW}}
+            - Date: ${{ env.NOW }}
             - Author: ${{ github.triggering_actor }}
             - Version: ${{ github.run_number }}
             - Commits:
-            - YCR Docker Image: cr.yandex/${{secrets.YC_REGISTRY_ID}}/app:${{ github.run_number }}
+            - YCR Docker Image: cr.yandex/${{secrets.REGISTRY_ID}}/app:${{ github.run_number }}
