--- a/.github/workflows/release-fix.yml
+++ b/.github/workflows/release-fix.yml
@@ -6,6 +6,10 @@ on:
       release_version:
         description: 'Release version'
         required: true
+      issue-number:
+        type: number
+        required: true
+        description: "Issue number"
   
 jobs:
   lint_and_test:
