--- a/.github/workflows/release-fix.yml
+++ b/.github/workflows/release-fix.yml
@@ -38,17 +38,18 @@ jobs:
           docker push cr.yandex/${{ secrets.REGISTRY_ID }}/app:${{ inputs.release_version }}_latest
 
   create_tag:
+    needs: [lint_and_test]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: release/${{github.run_number}}
+          ref: release/${{inputs.version}}
 
       - name: Push tag
         uses: EndBug/latest-tag@latest
         with:
-          tag-name: ${{github.run_number}}
-
+          tag-name: ${{ inputs.version }}_fix${{ github.run_number }}
+          
   add_comment:
     runs-on: ubuntu-latest
     
