--- a/.github/workflows/release-fix.yml
+++ b/.github/workflows/release-fix.yml
@@ -43,12 +43,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: release/${{inputs.version}}
+          ref: release/${{inputs.release_version}}
 
       - name: Push tag
         uses: EndBug/latest-tag@latest
         with:
-          tag-name: ${{ inputs.version }}_fix${{ github.run_number }}
+          tag-name: ${{ inputs.release_version }}_fix${{ github.run_number }}
           
   add_comment:
     runs-on: ubuntu-latest
