--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -8,43 +8,43 @@ on:
         type: string
         required: true
         description: "Version to release"
+      issue-number:
+        type: number
+        required: true
+        description: "Release Issue number id"
 
 jobs:
-  connect_and_deploy:
+  deploy:
     runs-on: ubuntu-latest
-    
     steps:
       - name: SSH and deploy to prod
-        uses: appleboy/ssh-action@v1.0.3
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           script: |
+            sudo groupadd docker
             sudo usermod -aG docker ${USER}
-            docker login --username oauth --password ${{ secrets.AUTH_TOKEN }} cr.yandex
-            docker pull cr.yandex/${{secrets.REGISTRY_ID}}/app:${{ inputs.version }}_latest
+            echo ${{ secrets.AUTH_TOKEN }} | docker login --username oauth --password-stdin cr.yandex
+            
+            docker pull cr.yandex/${{ secrets.REGISTRY_ID }}/app:${{ inputs.version }}_latest
             docker kill $(docker ps -q)
             docker rm $(docker ps -a -q)
             docker run -d --restart unless-stopped -p 3000:3000 cr.yandex/${{secrets.REGISTRY_ID}}/app:${{ inputs.version }}_latest
-  
+
   add_issue_comment:
+    needs: [deploy]
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout release branch
-        uses: actions/checkout@v3
-        with:
-          ref: release/${{ inputs.version }}
+      - name: Put current date into a variable
+        run: echo "NOW=$(date +'%Y-%m-%dT%H:%M:%S')" >> $GITHUB_ENV
 
-      - name: Add issue comment
-        run: |
-          touch $ISSUE
-          echo "**Deploy to production**" >> $ISSUE
-          echo "- Date: $(date)" >> $ISSUE
-          echo "- Author: ${{ github.triggering_actor }}" >> $ISSUE
-          number=$(gh issue list --label "release ${{ inputs.version }}" --json number --jq '.[0].number')
-          gh issue comment "$number" --body-file "$ISSUE"
-          rm $ISSUE
-        env:
-          ISSUE: issue.txt
-  
+      - name: Create comment
+        uses: peter-evans/create-or-update-comment@v4
+        with:
+          issue-number: ${{inputs.issue-number}}
+          body: |
+            **Prod**:
+            - Date: ${{env.NOW}}
+            - Author: ${{ github.triggering_actor }}
