--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -19,6 +19,7 @@ jobs:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             sudo usermod -aG docker ${USER}
             docker login --username oauth --password ${{ secrets.AUTH_TOKEN }} cr.yandex
